<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddStoredActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_book_name"
                android:id="@+id/textView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/nameEditText"
                    android:singleLine="true"
                    android:lines="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:minWidth="0dp"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:background="@color/colorPrimary"
                    android:text="@string/find_books_by_name"
                    android:onClick="searchByNameField" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_book_author"
                android:id="@+id/textView2" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/authorEditText"
                android:singleLine="true"
                android:lines="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_book_isbn"
                android:id="@+id/textView3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:id="@+id/isbnEditText"
                    android:singleLine="true"
                    android:lines="1" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:minHeight="35dp"
                    android:minWidth="0dp"
                    android:textColor="@color/abc_primary_text_material_dark"
                    android:background="@color/colorPrimary"
                    android:text="@string/find_books_by_isbn"
                    android:onClick="searchByIsbnField" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_or_scan"
                android:id="@+id/textView4"
                android:layout_gravity="center_horizontal"
                android:padding="24dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_scan_barcode"
                android:id="@+id/button3"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/abc_primary_text_material_dark"
                android:background="@color/colorPrimary"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:onClick="scanButtonClicked" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/form_book_note"
                android:id="@+id/textView5"
                android:paddingTop="15dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/noteEditText" />

        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="52dp"
        android:text="@string/form_book_add"
        android:id="@+id/button2"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimary"
        android:textColor="@color/abc_primary_text_material_dark"
        android:onClick="addButtonClicked" />
</FrameLayout>
